inizializzazione db e creazione plugin di esempio di tic tac toe. sto provando a fare refactoring
